--- a/.github/workflows/main-01.yml
+++ b/.github/workflows/main-01.yml
@@ -22,3 +22,31 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+
+  CD:
+    needs: [CI]
+    runs-on: ubuntu-latest
+    
+    steps:
+      - uses: actions/checkout@v2
+      
+      - name: Connect Tailscale
+        uses: tailscale/github-action@v1
+        with:
+          authkey: ${{ secrets.TAILSCALE_KEY }} 
+          version: 1.14.0      
+            
+      
+      - name: Kubernetes Set Context
+        uses: Azure/k8s-set-context@v2
+        with:
+          method: kubeconfig
+          kubeconfig: ${{ secrets.K8S_CONFIG_PI }}
+
+      - name: Deploy to Kubernetes cluster
+        uses: Azure/k8s-deploy@v1.5
+        with:
+          images: wordpress:4.8-apache
+          manifests: |
+            pv/wordpress-deployment.yaml
+            pv/mysql-deployment.yaml
