--- a/.github/workflows/main-01.yml
+++ b/.github/workflows/main-01.yml
@@ -50,3 +50,15 @@ jobs:
  #         manifests: |
  #           pv/wordpress-deployment.yaml
  #           pv/mysql-deployment.yaml
+
+#      - name: 'Kustomize Build'
+#         uses: karancode/kustomize-github-action@master
+#        with:
+#          kustomize_version: '3.0.0'
+#          kustomize_build_dir: '.'
+#          kustomize_comment: true
+#          kustomize_output_file: "gitops/rendered.yaml"
+#          kustomize_build_options: "--load_restrictor none"
+#          enable_alpha_plugins: true
+#        env:
+#          GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_ACCESS_TOKEN }}
