--- a/.github/workflows/main-01.yml
+++ b/.github/workflows/main-01.yml
@@ -51,13 +51,13 @@ jobs:
  #           pv/wordpress-deployment.yaml
  #           pv/mysql-deployment.yaml
 
-      - name: 'Kustomize Build'
-        uses: karancode/kustomize-github-action@master
-        with:
+#      - name: 'Kustomize Build'
+#        uses: karancode/kustomize-github-action@master
+#        with:
 #          kustomize_version: '3.0.0'
 #          kustomize_build_dir: '.'
 #          kustomize_comment: true
-          kustomize_output_file: "pv/kustomization.yaml" #gitops/rendered.yaml
+#          kustomize_output_file: "pv/kustomization.yaml" #gitops/rendered.yaml
 #          kustomize_build_options: "--load_restrictor none"
 #          enable_alpha_plugins: true
 #        env:
