--- a/.github/workflows/main-01.yml
+++ b/.github/workflows/main-01.yml
@@ -48,7 +48,7 @@ jobs:
         with:
           images: wordpress:4.8-apache
           manifests: |
-            pv/mysql-secrets.yaml
+#            pv/mysql-secrets.yaml
             pv/mysql-deployment.yaml
             pv/wordpress-deployment.yaml
             
