--- a/.github/workflows/main-01.yml
+++ b/.github/workflows/main-01.yml
@@ -43,6 +43,13 @@ jobs:
           method: kubeconfig
           kubeconfig: ${{ secrets.K8S_CONFIG_PI }}
 
+      - name: Trigger deploy
+        uses: phamquyhai/kubernetes-action@master
+        env:
+          KUBE_CONFIG_DATA: ${{ secrets.K8S_CONFIG_PI }}
+        with:
+          args: apply -k ./
+
 #      - name: Deploy to Kubernetes cluster
 #        uses: Azure/k8s-deploy@v1.5
 #        with:
