--- a/.github/workflows/main-01.yml
+++ b/.github/workflows/main-01.yml
@@ -30,18 +30,22 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       
-      - name: Connect Tailscale
-        uses: tailscale/github-action@v1
+#      - name: Connect Tailscale
+#        uses: tailscale/github-action@v1
+#        with:
+#          authkey: ${{ secrets.TAILSCALE_KEY }} 
+#          version: 1.14.0      
+      - id: 'auth'
+        name: 'Authenticate to Google Cloud'
+        uses: google-github-actions/auth@v0.4.0
         with:
-          authkey: ${{ secrets.TAILSCALE_KEY }} 
-          version: 1.14.0      
-            
+          credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'            
       
       - name: Kubernetes Set Context
         uses: Azure/k8s-set-context@v2
         with:
           method: kubeconfig
-          kubeconfig: ${{ secrets.K8S_CONFIG_PI }}
+          kubeconfig: ${{ secrets.K8S_CONFIG_GKE }}
 
       - name: Trigger deploy
         uses: phamquyhai/kubernetes-action@master
