--- a/.github/workflows/main-01.yml
+++ b/.github/workflows/main-01.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Trigger deploy
         uses: phamquyhai/kubernetes-action@master
         with:
-          args: apply pv./kustomization.yaml
+          args: apply -k pv./
 
 #      - name: Deploy to Kubernetes cluster
 #        uses: Azure/k8s-deploy@v1.5
