--- a/.github/workflows/main-01.yml
+++ b/.github/workflows/main-01.yml
@@ -46,11 +46,17 @@ jobs:
         with:
           method: kubeconfig
           kubeconfig: ${{ secrets.K8S_CONFIG_GKE }}
+          
+      - name: Execute apply -k
+        run: |-
+          kubectl apply -k pv./
 
-      - name: Trigger deploy
-        uses: phamquyhai/kubernetes-action@master
-        with:
-          args: apply -f pv/kustomization.yaml
+
+
+#      - name: Trigger deploy
+#        uses: phamquyhai/kubernetes-action@master
+#        with:
+#          args: apply -f pv/kustomization.yaml
 
 #      - name: Deploy to Kubernetes cluster
 #        uses: Azure/k8s-deploy@v1.5
