--- a/.github/workflows/main-01.yml
+++ b/.github/workflows/main-01.yml
@@ -22,7 +22,6 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-
   CD:
 #    needs: [CI]
     runs-on: ubuntu-latest
@@ -30,11 +29,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       
-      - id: 'auth'
-        name: 'Authenticate to Google Cloud'
-        uses: google-github-actions/auth@v0.4.0
+      - name: Connect Tailscale
+        uses: tailscale/github-action@v1
         with:
-          credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'            
+          authkey: ${{ secrets.TAILSCALE_KEY }} 
+          version: 1.14.0      
       
       - name: Kubernetes Set Context
         uses: Azure/k8s-set-context@v2
