--- a/.github/workflows/main-01.yml
+++ b/.github/workflows/main-01.yml
@@ -39,7 +39,7 @@ jobs:
         uses: Azure/k8s-set-context@v2
         with:
           method: kubeconfig
-          kubeconfig: ${{ secrets.K8S_CONFIG_GKE }}
+          kubeconfig: ${{ secrets.K8S_CONFIG_PI }}
           
       - name: Execute apply -k
         run: |-
