--- a/.github/workflows/main-01.yml
+++ b/.github/workflows/main-01.yml
@@ -1,27 +1,32 @@
-name: CI
-
+name: CI-CD
 on:
   push:
-    branches: [ main ]
-  pull_request:
     branches: [ main ]
 
   workflow_dispatch:
 
 jobs:
-  build:
+  CI:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
 
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Docker Login
+        uses: docker/login-action@v1.12.0
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_PWD }}
+          
+#      - name: Docker Build and Push
+#        uses: docker/build-push-action@v2.7.0
+#        with:
+#          context: ./src
+#          push: true
+#          no-cache: true
+#          tags: |
+#            leandroaurelio/conversao-temperatura:latest
+#            leandroaurelio/conversao-temperatura:v${{ github.run_number }}
   CD:
 #    needs: [CI]
     runs-on: ubuntu-latest
