--- a/pv/wordpress-deployment.yaml
+++ b/pv/wordpress-deployment.yaml
@@ -39,7 +39,7 @@ metadata:
     app: wordpress
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 20Gi
